fixing the image upload bug

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -40,7 +40,7 @@
     </main>
 
     <footer class="py-5">
-      <p>Build by Raddy</p>
+      <p>Build with Love By Abhishek</p>
     </footer>
 
   </div>
